# test_wgpu

./: .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: frag1.frag  lib.rs  main.rs  my_frag1.frag  my_shader.wgsl  my_shader_frag.wgsl  my_vert1.vert  shader.wgsl  vert1.vert
