[package]
name = "shader_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
env_logger = "0.10"
log = "0.4"
wgpu = {version = "0.16.1", features = ["glsl"]}
pollster = "0.3"
naga = "0.12.0"
rustc-hash = "*"
bytemuck = { version = "1.12", features = [ "derive" ] }